--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,63 +5,63 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇺🇸 美国-2.13MB/s(Youtube:不良林), server: s3.hazz.win, port: 12340, type: trojan, password: dfbf0d67-f03d-4184-a224-c2d64a571f99, sni: s3.hazz.win, skip-cert-verify: true}
-  - {name: 🇫🇷 法国-443.9KB/s(Youtube:不良林), server: 51.38.118.42, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
-  - {name: 🇨🇳 中国-294.5KB/s(Youtube:不良林), server: 116.129.254.78, port: 63004, type: vmess, uuid: 352ba93c-fd92-3055-ad10-b3599ff2802f, alterId: 0, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /, ws-headers: {Host: 116.129.254.78}}
-  - {name: 🇷🇺 俄罗斯联邦-448.9KB/s(Youtube:不良林), server: 185.4.65.6, port: 21247, type: ss, cipher: aes-256-cfb, password: vDS9G2p}
-  - {name: 🇫🇷 法国-2.04MB/s(Youtube:不良林), server: 54.37.192.112, port: 443, type: vmess, uuid: 9f58234c-355b-4065-ae21-d4a63099aba5, alterId: 64, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /path/120208301422, ws-headers: {Host: 54.37.192.112}}
+  - {name: 🇨🇦 加拿大-804.9KB/s(Youtube:不良林), server: 138.197.166.205, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
+  - {name: 🇨🇳 中国-2.30MB/s(Youtube:不良林), server: 116.129.254.65, port: 63088, type: vmess, uuid: 352ba93c-fd92-3055-ad10-b3599ff2802f, alterId: 0, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /mugua, ws-headers: {Host: 116.129.254.65}}
   - {name: 🇮🇳 印度-1.41MB/s(Youtube:不良林), server: jgwhdlb1.gaox.ml, port: 443, type: trojan, password: e05c749b-7c6b-41b8-9c71-9dcf685edf4a, sni: jgwhdlb1.gaox.ml, skip-cert-verify: true}
   - {name: 🇺🇸 美国-2.08MB/s(Youtube:不良林), server: s2.hazz.win, port: 12340, type: trojan, password: dfbf0d67-f03d-4184-a224-c2d64a571f99, sni: s2.hazz.win, skip-cert-verify: true}
+  - {name: 🇫🇷 法国-757.6KB/s(Youtube:不良林), server: 51.38.118.42, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
   - {name: 🇨🇳 中国-496.4KB/s(Youtube:不良林), server: 116.129.254.65, port: 63004, type: vmess, uuid: 352ba93c-fd92-3055-ad10-b3599ff2802f, alterId: 0, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /, ws-headers: {Host: 116.129.254.65}}
   - {name: 🇺🇸 美国-2.70MB/s(Youtube:不良林), server: v20.emovpn.xyz, port: 1256, type: vmess, uuid: ed8a43ac-b02b-4026-a101-f4df7c35e480, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /, ws-headers: {Host: v20.emovpn.xyz}}
   - {name: 🇺🇸 美国-2.77MB/s(Youtube:不良林), server: zero.marythunt.xyz, port: 443, type: trojan, password: !<str> 372815193, sni: zero.marythunt.xyz, skip-cert-verify: true}
+  - {name: 🇦🇺 澳大利亚-1.32MB/s(Youtube:不良林), server: jgwxn3.gaox.ml, port: 443, type: trojan, password: cb43b7c2-b744-41c5-bcc2-fd7467b332cf, sni: jgwxn3.gaox.ml, skip-cert-verify: true}
+  - {name: 🇬🇧 英国-1.20MB/s(Youtube:不良林), server: 185.105.191.227, port: 443, type: vmess, uuid: 248c42c7-5328-46f6-8473-7a7e7c0b3c39, alterId: 0, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /f1hUi8k, ws-headers: {Host: 185.105.191.227}}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇺🇸 美国-2.13MB/s(Youtube:不良林)
-      - 🇫🇷 法国-443.9KB/s(Youtube:不良林)
-      - 🇨🇳 中国-294.5KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-448.9KB/s(Youtube:不良林)
-      - 🇫🇷 法国-2.04MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-804.9KB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.30MB/s(Youtube:不良林)
       - 🇮🇳 印度-1.41MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.08MB/s(Youtube:不良林)
+      - 🇫🇷 法国-757.6KB/s(Youtube:不良林)
       - 🇨🇳 中国-496.4KB/s(Youtube:不良林)
       - 🇺🇸 美国-2.70MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.77MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.32MB/s(Youtube:不良林)
+      - 🇬🇧 英国-1.20MB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇺🇸 美国-2.13MB/s(Youtube:不良林)
-      - 🇫🇷 法国-443.9KB/s(Youtube:不良林)
-      - 🇨🇳 中国-294.5KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-448.9KB/s(Youtube:不良林)
-      - 🇫🇷 法国-2.04MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-804.9KB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.30MB/s(Youtube:不良林)
       - 🇮🇳 印度-1.41MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.08MB/s(Youtube:不良林)
+      - 🇫🇷 法国-757.6KB/s(Youtube:不良林)
       - 🇨🇳 中国-496.4KB/s(Youtube:不良林)
       - 🇺🇸 美国-2.70MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.77MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.32MB/s(Youtube:不良林)
+      - 🇬🇧 英国-1.20MB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇺🇸 美国-2.13MB/s(Youtube:不良林)
-      - 🇫🇷 法国-443.9KB/s(Youtube:不良林)
-      - 🇨🇳 中国-294.5KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-448.9KB/s(Youtube:不良林)
-      - 🇫🇷 法国-2.04MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-804.9KB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.30MB/s(Youtube:不良林)
       - 🇮🇳 印度-1.41MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.08MB/s(Youtube:不良林)
+      - 🇫🇷 法国-757.6KB/s(Youtube:不良林)
       - 🇨🇳 中国-496.4KB/s(Youtube:不良林)
       - 🇺🇸 美国-2.70MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.77MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.32MB/s(Youtube:不良林)
+      - 🇬🇧 英国-1.20MB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
@@ -72,47 +72,47 @@ proxy-groups:
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇺🇸 美国-2.13MB/s(Youtube:不良林)
-      - 🇫🇷 法国-443.9KB/s(Youtube:不良林)
-      - 🇨🇳 中国-294.5KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-448.9KB/s(Youtube:不良林)
-      - 🇫🇷 法国-2.04MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-804.9KB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.30MB/s(Youtube:不良林)
       - 🇮🇳 印度-1.41MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.08MB/s(Youtube:不良林)
+      - 🇫🇷 法国-757.6KB/s(Youtube:不良林)
       - 🇨🇳 中国-496.4KB/s(Youtube:不良林)
       - 🇺🇸 美国-2.70MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.77MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.32MB/s(Youtube:不良林)
+      - 🇬🇧 英国-1.20MB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇺🇸 美国-2.13MB/s(Youtube:不良林)
-      - 🇫🇷 法国-443.9KB/s(Youtube:不良林)
-      - 🇨🇳 中国-294.5KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-448.9KB/s(Youtube:不良林)
-      - 🇫🇷 法国-2.04MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-804.9KB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.30MB/s(Youtube:不良林)
       - 🇮🇳 印度-1.41MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.08MB/s(Youtube:不良林)
+      - 🇫🇷 法国-757.6KB/s(Youtube:不良林)
       - 🇨🇳 中国-496.4KB/s(Youtube:不良林)
       - 🇺🇸 美国-2.70MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.77MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.32MB/s(Youtube:不良林)
+      - 🇬🇧 英国-1.20MB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇺🇸 美国-2.13MB/s(Youtube:不良林)
-      - 🇫🇷 法国-443.9KB/s(Youtube:不良林)
-      - 🇨🇳 中国-294.5KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-448.9KB/s(Youtube:不良林)
-      - 🇫🇷 法国-2.04MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-804.9KB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.30MB/s(Youtube:不良林)
       - 🇮🇳 印度-1.41MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.08MB/s(Youtube:不良林)
+      - 🇫🇷 法国-757.6KB/s(Youtube:不良林)
       - 🇨🇳 中国-496.4KB/s(Youtube:不良林)
       - 🇺🇸 美国-2.70MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.77MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.32MB/s(Youtube:不良林)
+      - 🇬🇧 英国-1.20MB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -128,16 +128,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇺🇸 美国-2.13MB/s(Youtube:不良林)
-      - 🇫🇷 法国-443.9KB/s(Youtube:不良林)
-      - 🇨🇳 中国-294.5KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-448.9KB/s(Youtube:不良林)
-      - 🇫🇷 法国-2.04MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-804.9KB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.30MB/s(Youtube:不良林)
       - 🇮🇳 印度-1.41MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.08MB/s(Youtube:不良林)
+      - 🇫🇷 法国-757.6KB/s(Youtube:不良林)
       - 🇨🇳 中国-496.4KB/s(Youtube:不良林)
       - 🇺🇸 美国-2.70MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.77MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.32MB/s(Youtube:不良林)
+      - 🇬🇧 英国-1.20MB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
