--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -6,10 +6,15 @@ log-level: info
 external-controller: :9090
 proxies:
   - {name: 🇨🇳 中国-814.2KB/s(Youtube:不良林), server: 116.129.254.65, port: 63088, type: vmess, uuid: 352ba93c-fd92-3055-ad10-b3599ff2802f, alterId: 0, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /mugua, ws-headers: {Host: 116.129.254.65}}
-  - {name: 🇺🇸 美国-871.3KB/s(Youtube:不良林), server: s2.hazz.win, port: 12340, type: trojan, password: dfbf0d67-f03d-4184-a224-c2d64a571f99, sni: s2.hazz.win, skip-cert-verify: true}
+  - {name: 🇨🇦 加拿大-549.4KB/s(Youtube:不良林), server: 138.197.166.205, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
+  - {name: 🇺🇸 美国-962.8KB/s(Youtube:不良林), server: s2.hazz.win, port: 12340, type: trojan, password: dfbf0d67-f03d-4184-a224-c2d64a571f99, sni: s2.hazz.win, skip-cert-verify: true}
+  - {name: 🇫🇷 法国-395.2KB/s(Youtube:不良林), server: 51.38.118.42, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
   - {name: 🇺🇸 美国-962.2KB/s(Youtube:不良林), server: s3.hazz.win, port: 12340, type: trojan, password: dfbf0d67-f03d-4184-a224-c2d64a571f99, sni: s3.hazz.win, skip-cert-verify: true}
   - {name: 🇺🇸 美国-260.3KB/s(Youtube:不良林), server: 92.38.176.81, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
   - {name: 🇫🇷 法国-394.5KB/s(Youtube:不良林), server: 54.37.192.112, port: 443, type: vmess, uuid: 9f58234c-355b-4065-ae21-d4a63099aba5, alterId: 64, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /path/120208301422, ws-headers: {Host: 54.37.192.112}}
+  - {name: 🇨🇳 中国-749.7KB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 33003, type: vmess, uuid: 177501cc-f0c2-3cc3-b9a7-8c1e8e27655f, alterId: 1, cipher: auto, tls: false, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-276.6KB/s(Youtube:不良林), server: 116.129.254.65, port: 63078, type: vmess, uuid: 352ba93c-fd92-3055-ad10-b3599ff2802f, alterId: 0, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /, ws-headers: {Host: 116.129.254.65}}
+  - {name: 🇨🇳 中国-231.0KB/s(Youtube:不良林), server: ma-zf.jiashumao.net, port: 22983, type: trojan, password: 375e1e34-8f6f-39be-bdb9-52080f546d4d, sni: ma-zf.jiashumao.net, skip-cert-verify: true}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
@@ -17,20 +22,30 @@ proxy-groups:
       - ♻️ 自动选择
       - 🎯 全球直连
       - 🇨🇳 中国-814.2KB/s(Youtube:不良林)
-      - 🇺🇸 美国-871.3KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-549.4KB/s(Youtube:不良林)
+      - 🇺🇸 美国-962.8KB/s(Youtube:不良林)
+      - 🇫🇷 法国-395.2KB/s(Youtube:不良林)
       - 🇺🇸 美国-962.2KB/s(Youtube:不良林)
       - 🇺🇸 美国-260.3KB/s(Youtube:不良林)
       - 🇫🇷 法国-394.5KB/s(Youtube:不良林)
+      - 🇨🇳 中国-749.7KB/s(Youtube:不良林)
+      - 🇨🇳 中国-276.6KB/s(Youtube:不良林)
+      - 🇨🇳 中国-231.0KB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
       - 🇨🇳 中国-814.2KB/s(Youtube:不良林)
-      - 🇺🇸 美国-871.3KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-549.4KB/s(Youtube:不良林)
+      - 🇺🇸 美国-962.8KB/s(Youtube:不良林)
+      - 🇫🇷 法国-395.2KB/s(Youtube:不良林)
       - 🇺🇸 美国-962.2KB/s(Youtube:不良林)
       - 🇺🇸 美国-260.3KB/s(Youtube:不良林)
       - 🇫🇷 法国-394.5KB/s(Youtube:不良林)
+      - 🇨🇳 中国-749.7KB/s(Youtube:不良林)
+      - 🇨🇳 中国-276.6KB/s(Youtube:不良林)
+      - 🇨🇳 中国-231.0KB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
@@ -38,10 +53,15 @@ proxy-groups:
       - ♻️ 自动选择
       - 🎯 全球直连
       - 🇨🇳 中国-814.2KB/s(Youtube:不良林)
-      - 🇺🇸 美国-871.3KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-549.4KB/s(Youtube:不良林)
+      - 🇺🇸 美国-962.8KB/s(Youtube:不良林)
+      - 🇫🇷 法国-395.2KB/s(Youtube:不良林)
       - 🇺🇸 美国-962.2KB/s(Youtube:不良林)
       - 🇺🇸 美国-260.3KB/s(Youtube:不良林)
       - 🇫🇷 法国-394.5KB/s(Youtube:不良林)
+      - 🇨🇳 中国-749.7KB/s(Youtube:不良林)
+      - 🇨🇳 中国-276.6KB/s(Youtube:不良林)
+      - 🇨🇳 中国-231.0KB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
@@ -53,20 +73,30 @@ proxy-groups:
       - 🎯 全球直连
       - 🔰 节点选择
       - 🇨🇳 中国-814.2KB/s(Youtube:不良林)
-      - 🇺🇸 美国-871.3KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-549.4KB/s(Youtube:不良林)
+      - 🇺🇸 美国-962.8KB/s(Youtube:不良林)
+      - 🇫🇷 法国-395.2KB/s(Youtube:不良林)
       - 🇺🇸 美国-962.2KB/s(Youtube:不良林)
       - 🇺🇸 美国-260.3KB/s(Youtube:不良林)
       - 🇫🇷 法国-394.5KB/s(Youtube:不良林)
+      - 🇨🇳 中国-749.7KB/s(Youtube:不良林)
+      - 🇨🇳 中国-276.6KB/s(Youtube:不良林)
+      - 🇨🇳 中国-231.0KB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - 🇨🇳 中国-814.2KB/s(Youtube:不良林)
-      - 🇺🇸 美国-871.3KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-549.4KB/s(Youtube:不良林)
+      - 🇺🇸 美国-962.8KB/s(Youtube:不良林)
+      - 🇫🇷 法国-395.2KB/s(Youtube:不良林)
       - 🇺🇸 美国-962.2KB/s(Youtube:不良林)
       - 🇺🇸 美国-260.3KB/s(Youtube:不良林)
       - 🇫🇷 法国-394.5KB/s(Youtube:不良林)
+      - 🇨🇳 中国-749.7KB/s(Youtube:不良林)
+      - 🇨🇳 中国-276.6KB/s(Youtube:不良林)
+      - 🇨🇳 中国-231.0KB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
@@ -74,10 +104,15 @@ proxy-groups:
       - 🎯 全球直连
       - ♻️ 自动选择
       - 🇨🇳 中国-814.2KB/s(Youtube:不良林)
-      - 🇺🇸 美国-871.3KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-549.4KB/s(Youtube:不良林)
+      - 🇺🇸 美国-962.8KB/s(Youtube:不良林)
+      - 🇫🇷 法国-395.2KB/s(Youtube:不良林)
       - 🇺🇸 美国-962.2KB/s(Youtube:不良林)
       - 🇺🇸 美国-260.3KB/s(Youtube:不良林)
       - 🇫🇷 法国-394.5KB/s(Youtube:不良林)
+      - 🇨🇳 中国-749.7KB/s(Youtube:不良林)
+      - 🇨🇳 中国-276.6KB/s(Youtube:不良林)
+      - 🇨🇳 中国-231.0KB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -94,10 +129,15 @@ proxy-groups:
       - 🎯 全球直连
       - ♻️ 自动选择
       - 🇨🇳 中国-814.2KB/s(Youtube:不良林)
-      - 🇺🇸 美国-871.3KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-549.4KB/s(Youtube:不良林)
+      - 🇺🇸 美国-962.8KB/s(Youtube:不良林)
+      - 🇫🇷 法国-395.2KB/s(Youtube:不良林)
       - 🇺🇸 美国-962.2KB/s(Youtube:不良林)
       - 🇺🇸 美国-260.3KB/s(Youtube:不良林)
       - 🇫🇷 法国-394.5KB/s(Youtube:不良林)
+      - 🇨🇳 中国-749.7KB/s(Youtube:不良林)
+      - 🇨🇳 中国-276.6KB/s(Youtube:不良林)
+      - 🇨🇳 中国-231.0KB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
