--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -6,10 +6,9 @@ log-level: info
 external-controller: :9090
 proxies:
   - {name: 🇫🇷 法国-247.1KB/s(Youtube:不良林), server: 54.37.192.112, port: 443, type: vmess, uuid: 9f58234c-355b-4065-ae21-d4a63099aba5, alterId: 64, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /path/120208301422, ws-headers: {Host: 54.37.192.112}}
-  - {name: 🇨🇳 中国-749.7KB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 33003, type: vmess, uuid: 177501cc-f0c2-3cc3-b9a7-8c1e8e27655f, alterId: 1, cipher: auto, tls: false, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-276.6KB/s(Youtube:不良林), server: 116.129.254.65, port: 63078, type: vmess, uuid: 352ba93c-fd92-3055-ad10-b3599ff2802f, alterId: 0, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /, ws-headers: {Host: 116.129.254.65}}
-  - {name: 🇨🇳 中国-231.0KB/s(Youtube:不良林), server: ma-zf.jiashumao.net, port: 22983, type: trojan, password: 375e1e34-8f6f-39be-bdb9-52080f546d4d, sni: ma-zf.jiashumao.net, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-152.2KB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 33003, type: vmess, uuid: 177501cc-f0c2-3cc3-b9a7-8c1e8e27655f, alterId: 1, cipher: auto, tls: false, skip-cert-verify: true}
   - {name: 🇨🇳 中国-254.2KB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 33005, type: vmess, uuid: 2f606ee8-3cfa-30b2-a191-f88efe912f5c, alterId: 1, cipher: auto, tls: false, skip-cert-verify: true}
+  - {name: 🇭🇰 香港-3.54MB/s(Youtube:不良林), server: 20.205.39.179, port: 12388, type: trojan, password: 9ff4a104-d00e-4867-96e7-6f5f63070005, skip-cert-verify: true}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
@@ -17,20 +16,18 @@ proxy-groups:
       - ♻️ 自动选择
       - 🎯 全球直连
       - 🇫🇷 法国-247.1KB/s(Youtube:不良林)
-      - 🇨🇳 中国-749.7KB/s(Youtube:不良林)
-      - 🇨🇳 中国-276.6KB/s(Youtube:不良林)
-      - 🇨🇳 中国-231.0KB/s(Youtube:不良林)
+      - 🇨🇳 中国-152.2KB/s(Youtube:不良林)
       - 🇨🇳 中国-254.2KB/s(Youtube:不良林)
+      - 🇭🇰 香港-3.54MB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
       - 🇫🇷 法国-247.1KB/s(Youtube:不良林)
-      - 🇨🇳 中国-749.7KB/s(Youtube:不良林)
-      - 🇨🇳 中国-276.6KB/s(Youtube:不良林)
-      - 🇨🇳 中国-231.0KB/s(Youtube:不良林)
+      - 🇨🇳 中国-152.2KB/s(Youtube:不良林)
       - 🇨🇳 中国-254.2KB/s(Youtube:不良林)
+      - 🇭🇰 香港-3.54MB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
@@ -38,14 +35,14 @@ proxy-groups:
       - ♻️ 自动选择
       - 🎯 全球直连
       - 🇫🇷 法国-247.1KB/s(Youtube:不良林)
-      - 🇨🇳 中国-749.7KB/s(Youtube:不良林)
-      - 🇨🇳 中国-276.6KB/s(Youtube:不良林)
-      - 🇨🇳 中国-231.0KB/s(Youtube:不良林)
+      - 🇨🇳 中国-152.2KB/s(Youtube:不良林)
       - 🇨🇳 中国-254.2KB/s(Youtube:不良林)
+      - 🇭🇰 香港-3.54MB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
       - 🎯 全球直连
+      - 🇭🇰 香港-3.54MB/s(Youtube:不良林)
       - 🔰 节点选择
   - name: Ⓜ️ 微软服务
     type: select
@@ -53,20 +50,18 @@ proxy-groups:
       - 🎯 全球直连
       - 🔰 节点选择
       - 🇫🇷 法国-247.1KB/s(Youtube:不良林)
-      - 🇨🇳 中国-749.7KB/s(Youtube:不良林)
-      - 🇨🇳 中国-276.6KB/s(Youtube:不良林)
-      - 🇨🇳 中国-231.0KB/s(Youtube:不良林)
+      - 🇨🇳 中国-152.2KB/s(Youtube:不良林)
       - 🇨🇳 中国-254.2KB/s(Youtube:不良林)
+      - 🇭🇰 香港-3.54MB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - 🇫🇷 法国-247.1KB/s(Youtube:不良林)
-      - 🇨🇳 中国-749.7KB/s(Youtube:不良林)
-      - 🇨🇳 中国-276.6KB/s(Youtube:不良林)
-      - 🇨🇳 中国-231.0KB/s(Youtube:不良林)
+      - 🇨🇳 中国-152.2KB/s(Youtube:不良林)
       - 🇨🇳 中国-254.2KB/s(Youtube:不良林)
+      - 🇭🇰 香港-3.54MB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
@@ -74,10 +69,9 @@ proxy-groups:
       - 🎯 全球直连
       - ♻️ 自动选择
       - 🇫🇷 法国-247.1KB/s(Youtube:不良林)
-      - 🇨🇳 中国-749.7KB/s(Youtube:不良林)
-      - 🇨🇳 中国-276.6KB/s(Youtube:不良林)
-      - 🇨🇳 中国-231.0KB/s(Youtube:不良林)
+      - 🇨🇳 中国-152.2KB/s(Youtube:不良林)
       - 🇨🇳 中国-254.2KB/s(Youtube:不良林)
+      - 🇭🇰 香港-3.54MB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -94,10 +88,9 @@ proxy-groups:
       - 🎯 全球直连
       - ♻️ 自动选择
       - 🇫🇷 法国-247.1KB/s(Youtube:不良林)
-      - 🇨🇳 中国-749.7KB/s(Youtube:不良林)
-      - 🇨🇳 中国-276.6KB/s(Youtube:不良林)
-      - 🇨🇳 中国-231.0KB/s(Youtube:不良林)
+      - 🇨🇳 中国-152.2KB/s(Youtube:不良林)
       - 🇨🇳 中国-254.2KB/s(Youtube:不良林)
+      - 🇭🇰 香港-3.54MB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
