--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,66 +5,65 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇨🇳 中国-152.2KB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 33003, type: vmess, uuid: 177501cc-f0c2-3cc3-b9a7-8c1e8e27655f, alterId: 1, cipher: auto, tls: false, skip-cert-verify: true}
-  - {name: 🇭🇰 香港-3.54MB/s(Youtube:不良林), server: 20.205.39.179, port: 12388, type: trojan, password: 9ff4a104-d00e-4867-96e7-6f5f63070005, skip-cert-verify: true}
   - {name: 🇦🇺 澳大利亚-319.9KB/s(Youtube:不良林), server: 185.167.116.250, port: 9043, type: ss, cipher: aes-256-cfb, password: HSZuyJQcWe8dxNdF}
+  - {name: 🇨🇦 加拿大-615.2KB/s(Youtube:不良林), server: 138.197.166.205, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
+  - {name: 🇺🇸 美国-217.4KB/s(Youtube:不良林), server: s3.hazz.win, port: 12340, type: trojan, password: dfbf0d67-f03d-4184-a224-c2d64a571f99, sni: s3.hazz.win, skip-cert-verify: true}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇳 中国-152.2KB/s(Youtube:不良林)
-      - 🇭🇰 香港-3.54MB/s(Youtube:不良林)
       - 🇦🇺 澳大利亚-319.9KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-615.2KB/s(Youtube:不良林)
+      - 🇺🇸 美国-217.4KB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇨🇳 中国-152.2KB/s(Youtube:不良林)
-      - 🇭🇰 香港-3.54MB/s(Youtube:不良林)
       - 🇦🇺 澳大利亚-319.9KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-615.2KB/s(Youtube:不良林)
+      - 🇺🇸 美国-217.4KB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇳 中国-152.2KB/s(Youtube:不良林)
-      - 🇭🇰 香港-3.54MB/s(Youtube:不良林)
       - 🇦🇺 澳大利亚-319.9KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-615.2KB/s(Youtube:不良林)
+      - 🇺🇸 美国-217.4KB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
       - 🎯 全球直连
-      - 🇭🇰 香港-3.54MB/s(Youtube:不良林)
       - 🔰 节点选择
   - name: Ⓜ️ 微软服务
     type: select
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇨🇳 中国-152.2KB/s(Youtube:不良林)
-      - 🇭🇰 香港-3.54MB/s(Youtube:不良林)
       - 🇦🇺 澳大利亚-319.9KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-615.2KB/s(Youtube:不良林)
+      - 🇺🇸 美国-217.4KB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇨🇳 中国-152.2KB/s(Youtube:不良林)
-      - 🇭🇰 香港-3.54MB/s(Youtube:不良林)
       - 🇦🇺 澳大利亚-319.9KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-615.2KB/s(Youtube:不良林)
+      - 🇺🇸 美国-217.4KB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇳 中国-152.2KB/s(Youtube:不良林)
-      - 🇭🇰 香港-3.54MB/s(Youtube:不良林)
       - 🇦🇺 澳大利亚-319.9KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-615.2KB/s(Youtube:不良林)
+      - 🇺🇸 美国-217.4KB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -80,9 +79,9 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇳 中国-152.2KB/s(Youtube:不良林)
-      - 🇭🇰 香港-3.54MB/s(Youtube:不良林)
       - 🇦🇺 澳大利亚-319.9KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-615.2KB/s(Youtube:不良林)
+      - 🇺🇸 美国-217.4KB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
