--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,35 +5,39 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇦🇺 澳大利亚-319.9KB/s(Youtube:不良林), server: 185.167.116.250, port: 9043, type: ss, cipher: aes-256-cfb, password: HSZuyJQcWe8dxNdF}
   - {name: 🇨🇦 加拿大-615.2KB/s(Youtube:不良林), server: 138.197.166.205, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
   - {name: 🇺🇸 美国-217.4KB/s(Youtube:不良林), server: s3.hazz.win, port: 12340, type: trojan, password: dfbf0d67-f03d-4184-a224-c2d64a571f99, sni: s3.hazz.win, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-809.1KB/s(Youtube:不良林), server: ma-zf.jiashumao.net, port: 22983, type: trojan, password: 375e1e34-8f6f-39be-bdb9-52080f546d4d, sni: ma-zf.jiashumao.net, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-632.6KB/s(Youtube:不良林), server: s2.hazz.win, port: 12340, type: trojan, password: dfbf0d67-f03d-4184-a224-c2d64a571f99, sni: s2.hazz.win, skip-cert-verify: true}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇦🇺 澳大利亚-319.9KB/s(Youtube:不良林)
       - 🇨🇦 加拿大-615.2KB/s(Youtube:不良林)
       - 🇺🇸 美国-217.4KB/s(Youtube:不良林)
+      - 🇨🇳 中国-809.1KB/s(Youtube:不良林)
+      - 🇺🇸 美国-632.6KB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇦🇺 澳大利亚-319.9KB/s(Youtube:不良林)
       - 🇨🇦 加拿大-615.2KB/s(Youtube:不良林)
       - 🇺🇸 美国-217.4KB/s(Youtube:不良林)
+      - 🇨🇳 中国-809.1KB/s(Youtube:不良林)
+      - 🇺🇸 美国-632.6KB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇦🇺 澳大利亚-319.9KB/s(Youtube:不良林)
       - 🇨🇦 加拿大-615.2KB/s(Youtube:不良林)
       - 🇺🇸 美国-217.4KB/s(Youtube:不良林)
+      - 🇨🇳 中国-809.1KB/s(Youtube:不良林)
+      - 🇺🇸 美国-632.6KB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
@@ -44,26 +48,29 @@ proxy-groups:
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇦🇺 澳大利亚-319.9KB/s(Youtube:不良林)
       - 🇨🇦 加拿大-615.2KB/s(Youtube:不良林)
       - 🇺🇸 美国-217.4KB/s(Youtube:不良林)
+      - 🇨🇳 中国-809.1KB/s(Youtube:不良林)
+      - 🇺🇸 美国-632.6KB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇦🇺 澳大利亚-319.9KB/s(Youtube:不良林)
       - 🇨🇦 加拿大-615.2KB/s(Youtube:不良林)
       - 🇺🇸 美国-217.4KB/s(Youtube:不良林)
+      - 🇨🇳 中国-809.1KB/s(Youtube:不良林)
+      - 🇺🇸 美国-632.6KB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇦🇺 澳大利亚-319.9KB/s(Youtube:不良林)
       - 🇨🇦 加拿大-615.2KB/s(Youtube:不良林)
       - 🇺🇸 美国-217.4KB/s(Youtube:不良林)
+      - 🇨🇳 中国-809.1KB/s(Youtube:不良林)
+      - 🇺🇸 美国-632.6KB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -79,9 +86,10 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇦🇺 澳大利亚-319.9KB/s(Youtube:不良林)
       - 🇨🇦 加拿大-615.2KB/s(Youtube:不良林)
       - 🇺🇸 美国-217.4KB/s(Youtube:不良林)
+      - 🇨🇳 中国-809.1KB/s(Youtube:不良林)
+      - 🇺🇸 美国-632.6KB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
