--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,58 +5,82 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇨🇳 中国-809.1KB/s(Youtube:不良林), server: ma-zf.jiashumao.net, port: 22983, type: trojan, password: 375e1e34-8f6f-39be-bdb9-52080f546d4d, sni: ma-zf.jiashumao.net, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-632.6KB/s(Youtube:不良林), server: s2.hazz.win, port: 12340, type: trojan, password: dfbf0d67-f03d-4184-a224-c2d64a571f99, sni: s2.hazz.win, skip-cert-verify: true}
+  - {name: 🇭🇰 香港-2.81MB/s(Youtube:不良林), server: azgy001.xiba1.xyz, port: 20710, type: trojan, password: 7497242f-3044-3c77-bf48-14bb26c92a83, sni: azgy001.xiba1.xyz, skip-cert-verify: true}
+  - {name: 🇭🇰 香港-1.46MB/s(Youtube:不良林), server: azgy001.xiba1.xyz, port: 20712, type: trojan, password: 7497242f-3044-3c77-bf48-14bb26c92a83, sni: azgy001.xiba1.xyz, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-1.60MB/s(Youtube:不良林), server: s3.hazz.win, port: 12340, type: trojan, password: dfbf0d67-f03d-4184-a224-c2d64a571f99, sni: s3.hazz.win, skip-cert-verify: true}
+  - {name: 🇬🇧 英国-890.6KB/s(Youtube:不良林), server: jgwld4.gaox.ml, port: 443, type: trojan, password: 58d32c66-43b1-4561-9951-d87c9123774e, sni: jgwld4.gaox.ml, skip-cert-verify: true}
+  - {name: 🇭🇰 香港-2.59MB/s(Youtube:不良林), server: azgy001.xiba1.xyz, port: 20711, type: trojan, password: 7497242f-3044-3c77-bf48-14bb26c92a83, sni: azgy001.xiba1.xyz, skip-cert-verify: true}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇳 中国-809.1KB/s(Youtube:不良林)
-      - 🇺🇸 美国-632.6KB/s(Youtube:不良林)
+      - 🇭🇰 香港-2.81MB/s(Youtube:不良林)
+      - 🇭🇰 香港-1.46MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.60MB/s(Youtube:不良林)
+      - 🇬🇧 英国-890.6KB/s(Youtube:不良林)
+      - 🇭🇰 香港-2.59MB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇨🇳 中国-809.1KB/s(Youtube:不良林)
-      - 🇺🇸 美国-632.6KB/s(Youtube:不良林)
+      - 🇭🇰 香港-2.81MB/s(Youtube:不良林)
+      - 🇭🇰 香港-1.46MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.60MB/s(Youtube:不良林)
+      - 🇬🇧 英国-890.6KB/s(Youtube:不良林)
+      - 🇭🇰 香港-2.59MB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇳 中国-809.1KB/s(Youtube:不良林)
-      - 🇺🇸 美国-632.6KB/s(Youtube:不良林)
+      - 🇭🇰 香港-2.81MB/s(Youtube:不良林)
+      - 🇭🇰 香港-1.46MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.60MB/s(Youtube:不良林)
+      - 🇬🇧 英国-890.6KB/s(Youtube:不良林)
+      - 🇭🇰 香港-2.59MB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
       - 🎯 全球直连
+      - 🇭🇰 香港-2.81MB/s(Youtube:不良林)
+      - 🇭🇰 香港-1.46MB/s(Youtube:不良林)
+      - 🇭🇰 香港-2.59MB/s(Youtube:不良林)
       - 🔰 节点选择
   - name: Ⓜ️ 微软服务
     type: select
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇨🇳 中国-809.1KB/s(Youtube:不良林)
-      - 🇺🇸 美国-632.6KB/s(Youtube:不良林)
+      - 🇭🇰 香港-2.81MB/s(Youtube:不良林)
+      - 🇭🇰 香港-1.46MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.60MB/s(Youtube:不良林)
+      - 🇬🇧 英国-890.6KB/s(Youtube:不良林)
+      - 🇭🇰 香港-2.59MB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇨🇳 中国-809.1KB/s(Youtube:不良林)
-      - 🇺🇸 美国-632.6KB/s(Youtube:不良林)
+      - 🇭🇰 香港-2.81MB/s(Youtube:不良林)
+      - 🇭🇰 香港-1.46MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.60MB/s(Youtube:不良林)
+      - 🇬🇧 英国-890.6KB/s(Youtube:不良林)
+      - 🇭🇰 香港-2.59MB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇳 中国-809.1KB/s(Youtube:不良林)
-      - 🇺🇸 美国-632.6KB/s(Youtube:不良林)
+      - 🇭🇰 香港-2.81MB/s(Youtube:不良林)
+      - 🇭🇰 香港-1.46MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.60MB/s(Youtube:不良林)
+      - 🇬🇧 英国-890.6KB/s(Youtube:不良林)
+      - 🇭🇰 香港-2.59MB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -72,8 +96,11 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇳 中国-809.1KB/s(Youtube:不良林)
-      - 🇺🇸 美国-632.6KB/s(Youtube:不良林)
+      - 🇭🇰 香港-2.81MB/s(Youtube:不良林)
+      - 🇭🇰 香港-1.46MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.60MB/s(Youtube:不良林)
+      - 🇬🇧 英国-890.6KB/s(Youtube:不良林)
+      - 🇭🇰 香港-2.59MB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
