--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,49 +5,47 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇭🇰 香港-2.81MB/s(Youtube:不良林), server: azgy001.xiba1.xyz, port: 20710, type: trojan, password: 7497242f-3044-3c77-bf48-14bb26c92a83, sni: azgy001.xiba1.xyz, skip-cert-verify: true}
-  - {name: 🇭🇰 香港-1.46MB/s(Youtube:不良林), server: azgy001.xiba1.xyz, port: 20712, type: trojan, password: 7497242f-3044-3c77-bf48-14bb26c92a83, sni: azgy001.xiba1.xyz, skip-cert-verify: true}
   - {name: 🇺🇸 美国-1.60MB/s(Youtube:不良林), server: s3.hazz.win, port: 12340, type: trojan, password: dfbf0d67-f03d-4184-a224-c2d64a571f99, sni: s3.hazz.win, skip-cert-verify: true}
   - {name: 🇬🇧 英国-890.6KB/s(Youtube:不良林), server: jgwld4.gaox.ml, port: 443, type: trojan, password: 58d32c66-43b1-4561-9951-d87c9123774e, sni: jgwld4.gaox.ml, skip-cert-verify: true}
   - {name: 🇭🇰 香港-2.59MB/s(Youtube:不良林), server: azgy001.xiba1.xyz, port: 20711, type: trojan, password: 7497242f-3044-3c77-bf48-14bb26c92a83, sni: azgy001.xiba1.xyz, skip-cert-verify: true}
+  - {name: 🇨🇦 加拿大-554.6KB/s(Youtube:不良林), server: 138.197.166.205, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
+  - {name: 🇷🇺 俄罗斯联邦-263.4KB/s(Youtube:不良林), server: 185.4.65.6, port: 21247, type: ss, cipher: aes-256-cfb, password: vDS9G2p}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇭🇰 香港-2.81MB/s(Youtube:不良林)
-      - 🇭🇰 香港-1.46MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.60MB/s(Youtube:不良林)
       - 🇬🇧 英国-890.6KB/s(Youtube:不良林)
       - 🇭🇰 香港-2.59MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-554.6KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-263.4KB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇭🇰 香港-2.81MB/s(Youtube:不良林)
-      - 🇭🇰 香港-1.46MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.60MB/s(Youtube:不良林)
       - 🇬🇧 英国-890.6KB/s(Youtube:不良林)
       - 🇭🇰 香港-2.59MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-554.6KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-263.4KB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇭🇰 香港-2.81MB/s(Youtube:不良林)
-      - 🇭🇰 香港-1.46MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.60MB/s(Youtube:不良林)
       - 🇬🇧 英国-890.6KB/s(Youtube:不良林)
       - 🇭🇰 香港-2.59MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-554.6KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-263.4KB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
       - 🎯 全球直连
-      - 🇭🇰 香港-2.81MB/s(Youtube:不良林)
-      - 🇭🇰 香港-1.46MB/s(Youtube:不良林)
       - 🇭🇰 香港-2.59MB/s(Youtube:不良林)
       - 🔰 节点选择
   - name: Ⓜ️ 微软服务
@@ -55,32 +53,32 @@ proxy-groups:
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇭🇰 香港-2.81MB/s(Youtube:不良林)
-      - 🇭🇰 香港-1.46MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.60MB/s(Youtube:不良林)
       - 🇬🇧 英国-890.6KB/s(Youtube:不良林)
       - 🇭🇰 香港-2.59MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-554.6KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-263.4KB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇭🇰 香港-2.81MB/s(Youtube:不良林)
-      - 🇭🇰 香港-1.46MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.60MB/s(Youtube:不良林)
       - 🇬🇧 英国-890.6KB/s(Youtube:不良林)
       - 🇭🇰 香港-2.59MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-554.6KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-263.4KB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇭🇰 香港-2.81MB/s(Youtube:不良林)
-      - 🇭🇰 香港-1.46MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.60MB/s(Youtube:不良林)
       - 🇬🇧 英国-890.6KB/s(Youtube:不良林)
       - 🇭🇰 香港-2.59MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-554.6KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-263.4KB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -96,11 +94,11 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇭🇰 香港-2.81MB/s(Youtube:不良林)
-      - 🇭🇰 香港-1.46MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.60MB/s(Youtube:不良林)
       - 🇬🇧 英国-890.6KB/s(Youtube:不良林)
       - 🇭🇰 香港-2.59MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-554.6KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-263.4KB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
